Update background to full-page image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     body {
       font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-      background: transparent;
+      background: url('background-image.png') no-repeat center center fixed;
+      background-size: cover;
     }
 
     /* Chat bubble */
@@ -276,7 +277,7 @@
       flex: 1;
       padding: 24px;
       overflow-y: auto;
-      background: #fafafa url('https://raw.githubusercontent.com/Hpal09/clarity-chat/main/background-image.png') center/cover;
+      background: white;
       scrollbar-width: none;
       position: relative;
     }
