--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 
     body {
       font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-      background: url('background-image.png') no-repeat center center fixed;
+      background-image: url('background-image.png');
       background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
     }
 
     /* Chat bubble */
