Updated greeting messages.

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
 <body>
   <!-- Message Bubble -->
   <div id="message-bubble" class="message-bubble">
-    👋 Hi! I’m Greetie — your assistant for all things Clarity. Ask me anything about how it works, what it can do, or how to get started.
+    👋 Got a question about Clarity? I’m here to help.
   </div>
 
   <!-- Chat Bubble -->
@@ -627,7 +627,8 @@
     <div class="chat-messages" id="chat-messages">
       <div class="chat-message bot welcome-message" id="greeting-message">
         <div class="message-content">
-          <strong>Good day!</strong><br/>I'm Greetie, your AI assistant. How can I help you today?
+          <strong>Hi! I’m Greetie — your assistant for all things Clarity.</strong><br/>
+          Ask me anything about how it works, what it can do, or how to get started.
         </div>
       </div>
     </div>
