Updated greeting message

--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
       else if (hour < 18) greeting = "Good afternoon!";
       
       const greetingBox = document.querySelector("#greeting-message .message-content");
-      greetingBox.innerHTML = `<strong>${greeting}</strong><br/>I'm Greetie, your AI assistant. How can I help you today?`;
+      greetingBox.innerHTML = `<strong>${greeting}</strong><br/>I’m Greetie — your assistant for all things Clarity. Ask me anything about how it works, what it can do, or how to get started.`;
     }
 
     // UI Elements
